# src/api/swagger.yaml
@@ -106,6 +106,63 @@ paths:
         404:
           description: "Unexpected error"
       x-swagger-router-controller: "User"
+  /reviews:
+    get:
+      tags:
+        - "review"
+      summary: "Reviews available in the inventory"
+      description: "List of reviews available in the inventory"
+      operationId: "reviewsGET"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "offset"
+          in: "query"
+          description: "Pagination offset. Default is 0."
+          required: false
+          type: "integer"
+        - name: "limit"
+          in: "query"
+          description: "Maximum number of items per page. Default is 20 and cannot exceed\
+          \ 500."
+          required: false
+          type: "integer"
+      responses:
+        200:
+          description: "A collection of reviews"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Review"
+        404:
+          description: "Unexpected error"
+      x-swagger-router-controller: "Review"
+  /reviews/{reviewId}:
+    get:
+      tags:
+        - "review"
+      summary: "Find review by ID"
+      description: "Returns a review"
+      operationId: "getReviewById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "reviewId"
+          in: "path"
+          description: "ID of review to return"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Review"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Review not found"
+      x-swagger-router-controller: "Review"
 definitions:
   Book:
     type: "object"
@@ -231,7 +288,41 @@ definitions:
       password: 123456
       address: "DEIB"
       creditcard: "xyzabc"
-
+  Review:
+    type: object
+    required:
+      - comment
+      - user
+      - book
+    properties:
+        id:
+          type: integer
+          format: int64
+        comment:
+          type: string
+        user:
+          $ref: "#/definitions/User"
+        book:
+          $ref: "#/definitions/Book"
+    title: Review
+    description: A review
+    example:
+      id: 1
+      comment: Love it!
+      user:
+        id: 1
+        name: Andrea Bertini
+        email: andrea.bertini@mail.polimi.it
+        password: 123456
+        address: DEIB
+        creditcard: xyzabc
+      book:
+        id: 1
+        title: Il deserto dei tartari
+        author:
+          id: 1
+          name: Dino Buzzati
+          biography: Nasce il 16 ottobre 1906 a San Pellegrino, nei pressi di Belluno. Sin dalla giovinezza si manifestano in lui gli interessi, i temi e le passioni del futuro scrittore, ai quali resterà fedele per tutta la vita la poesia, la musica (studia violino e pianoforte e non bisogna dimenticare che in futuro scriverà anche alcuni libretti d'Opera), il disegno, e la montagna, vera compagna dell'infanzia, a cui è anche dedicato il suo primo romanzo, "Barnabo delle montagne".
 
 externalDocs:
   description: "Find out more about Swagger"
